Fix text align of topic in right panel

--- a/res/css/views/right_panel/_RoomSummaryCard.pcss
+++ b/res/css/views/right_panel/_RoomSummaryCard.pcss
@@ -53,6 +53,7 @@ limitations under the License.
 
     .mx_RoomSummaryCard_topic {
         padding: 0 12px;
+        text-align: start;
 
         .mx_Box {
             width: 100%;
